# cfmgr

./: .env.example  .gitignore  .pre-commit-config  README.md  SETUP.md  pyproject.toml  test_auth.sh  wrangler.toml  wrangler.toml.example
.github/: PROJECT.md  copilot-instructions.md
docs/: GIT_HOOKS.md
docs/api/: README.md  d1-api.md  r2-api.md
python_modules/markdown_it_py-4.0.0.dist-info/: RECORD
python_modules/pygments-2.19.2.dist-info/: RECORD
python_modules/pyodide_cli-0.4.0.dist-info/: METADATA  RECORD  entry_points.txt
python_modules/pywrangler/: __main__.py  cli.py  sync.py  utils.py
python_modules/typer-0.20.0.dist-info/: RECORD
python_modules/workers_py-1.2.1.dist-info/: METADATA  RECORD  entry_points.txt
scripts/: install-hooks.sh
src/: __init__.py  config.py  d1_manager.py  index.py  r2_manager.py  router.py
tests/: test_authentication.py  test_d1_manager.py  test_r2_manager.py
