[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cfmgr"
version = "0.1.0"
description = "Cloudflare Worker for managing D1 databases and R2 storage"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Developer", email = "dev@example.com"}
]
dependencies = [
    "workers-py>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 100
target-version = ['py313']
exclude = '''
/(
    \.git
  | \.venv
  | \.venv-workers
  | python_modules
  | __pycache__
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = [
    ".git",
    ".venv",
    ".venv-workers",
    "python_modules",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]  # 忽略行长度（由 Black 处理）

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # 允许未使用的导入

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "python_modules",
    ".venv",
    ".venv-workers",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
